--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title, "会員一覧" %>
 <div class="mx-auto py-3 px-5 w-100">
 	<h3 class="bg-light border px-3 mb-3 d-inline-block">会員一覧</h3>
 	<table class="table table-bordered">
