--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title, "会員詳細" %>
 <div class="mx-auto p-3 w-75">
 	<h3 class="bg-light border px-3 mb-3 d-inline-block"><%= "#{@customer.last_name} #{@customer.first_name} " %>さんの会員詳細</h3>
 	<table>
@@ -47,7 +48,7 @@
 							<%= link_to "編集する", edit_admin_customer_path, class: "btn btn-success" %>
 						</div>
 						<div class="mx-auto">
-							<%= link_to "注文履歴一覧を見る", admin_customer_path, class: "btn btn-primary" %><%# admin_homes_path(customer_id: params[:id]) %>
+							<%= link_to "注文履歴一覧を見る", admin_root_path(customer_id: params[:id]), class: "btn btn-primary" %><%# admin_homes_path(customer_id: params[:id]) %>
 						</div>
 					</div>
 				</td>
