--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,8 +1,10 @@
 <div class="container">
   <div class="row">
     <div class="mx-auto col-11 col-sm-10">
-      <div class="my-4">
-        <h4 class="col-2 bg-light text-center">注文履歴一覧</h4>
+      <div class="my-4 d-flex">
+        <h4 class="bg-light text-center px-2">
+          <%= "#{@customer.last_name} #{@customer.first_name} さんの" if @custmoer_search %>注文履歴<%= "一覧" unless @custmoer_search %>
+        </h4>
       </div>
       <table class="table col-12">
         <thead>
@@ -16,7 +18,7 @@
         <tbody>
           <% @orders.each do |order| %>
             <tr>
-              <td><%= link_to order.created_at.strftime('%Y/%m/%d %H:%M:%S'), "#", class: "link-dark" %></td>
+              <td><%= link_to order.created_at.strftime('%Y/%m/%d %H:%M:%S'), edit_admin_order_path(order.id), class: "link-dark" %></td>
               <td>
                 <%= order.customer.last_name %>
                 <%= order.customer.first_name %>
@@ -25,9 +27,9 @@
               <td><%= order.status_i18n %></td>
             </tr>
           <% end %>
-          <%= paginate @orders %>
         </tbody>
       </table>
+    <%= paginate @orders %>
     </div>
   </div>
 </div>
