--- a/app/views/admin/orders/edit.html.erb
+++ b/app/views/admin/orders/edit.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title, "注文履歴詳細" %>
 <div class="mx-auto p-3 w-75">
   <h3 class="bg-light border px-3 m-0 d-inline-block">注文履歴詳細</h3>
   <table>
