--- a/app/views/public/orders/_order_detail.html.erb
+++ b/app/views/public/orders/_order_detail.html.erb
@@ -6,7 +6,7 @@
 				<th class="text-center bg-light">単価 (税込)</th>
 				<th class="text-center bg-light">数量</th>
 				<th class="text-center bg-light">小計</th>
-				<% if request.path_info == edit_admin_order_path %>
+				<% if !params[:id].nil? &&  request.path_info == edit_admin_order_path %>
 					<th class="text-center bg-light">製作ステータス</td>
 				<% end %>
 			</tr>
@@ -18,7 +18,7 @@
 					<td class="text-end"><%= price_taxin(item.item.price) %></td>
 					<td class="text-end"><%= item.amount %></td>
 					<td class="text-end"><%= price((item.item.price * $tax_rate).floor * item.amount) %></td>
-					<% if request.path_info == edit_admin_order_path %>
+					<% if !params[:id].nil? && request.path_info == edit_admin_order_path %>
 						<td>
 							<%= form_with model: item, url: admin_order_detail_path(item.id), class: "d-flex" do |f| %>
 								<%= f.select :making_status, @making_statuses, {}, class: "form-select", disabled: disabled = (@order.status == "no_payment" || @order.status == "shipped") %>
