--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -14,7 +14,8 @@
         </tr>
         <tr>
           <td>宛名</td>
-          <td><%= f.text_field :name %>
+          <td><%= f.text_field :name %></td>
+          <td>
             <div class="text-right">
               <%= f.submit "新規登録",class: 'btn btn-success' %>
             </div>
