--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -6,7 +6,8 @@
         <h4 class="col-3 bg-light text-center">商品新規登録</h4>
       </div>
       <div class="mx-5 my-3">
-        <%= form_with model: @item, url: admin_items_path, method: :post do |f| %>
+        <%#= render "form", item: @item, genres: @genres %>
+        <%= form_with model: @item, url: admin_items_path do |f| %>
           <table class="table table-borderless">
             <tr class="form-group align-middle">
               <th class="w-25"><%= f.label :item_image, "商品画像" %></th>
@@ -14,11 +15,11 @@
             </tr>
             <tr class="form-group align-middle">
               <th><%= f.label :name, "商品名" %></th>
-              <td><%= f.text_field :name, autocomplete: "name", class: 'form-control', placeholder: "商品名" %></td>
+              <td><%= f.text_field :name, autocomplete: "name", class: 'form-control w-100', placeholder: "商品名" %></td>
             </tr>
             <tr class="form-group">
               <th class="pt-3"><%= f.label :introduction, "商品説明"%></th>
-              <td><%= f.text_area :introduction, class: 'form-control', placeholder: "ここに説明文を記述します", rows: "5" %></td>
+              <td><%= f.text_area :introduction, class: 'form-control w-100', placeholder: "ここに説明文を記述します", rows: "5" %></td>
             </tr>
             <tr class="form-group align-middle">
               <th><%= f.label :genre_id, "ジャンル" %></th>
@@ -26,7 +27,7 @@
             </tr>
             <tr class="form-group align-middle">
               <th><%= f.label :price, "税抜価格" %></th>
-              <td><%= f.text_field :price, class: 'form-control', placeholder: "1000" %></td>
+              <td><%= f.text_field :price, class: 'form-control w-100', placeholder: "1000" %></td>
               <td>円</td>
             </tr>
             <tr class="form-group align-middle">
