--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,9 @@
 
   <body class="container">
     <%= render "layouts/header" %>
+    <% flash.each do |message_type, message| %>
+      <%= content_tag :div, message, class: message_type %>
+    <% end %>
     <main class="d-flex">
       <%= yield %>
     </main>
