--- a/app/assets/stylesheets/public/cart_items.scss
+++ b/app/assets/stylesheets/public/cart_items.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the cart_items controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.form-select{
+	width: 5em !important;
+}
+
+.amount{
+	width: 10em;
+}
