--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -5,59 +5,66 @@
       <h2>ショッピングカート</h2>
     </div>
     <% if @cart_items.present? %>
-    <div class='col-2'>
-      <%= link_to 'カートを空にする', destroy_all_cart_items_path, class: "btn btn-danger", method: :delete %>
-    </div>
-    <table class="table table-bordered table-condensed">
-      <thead class="table-light">
+      <div class='col-2'>
+        <%= link_to 'カートを空にする', destroy_all_cart_items_path, class: "btn btn-danger text-nowrap", method: :delete %>
+      </div>
+      <table class="items_list table table-bordered table-condensed align-middle text-nowrap">
+        <thead class="table-light text-center">
+          <tr>
+            <th colspan="2">商品名</th>
+            <th>単価 (税込)</th>
+            <th class="amount">数量</th>
+            <th>小計</th>
+            <th></th>
+          </tr>
+        </thead>
+        <% @cart_items.each do |cart_item| %>
         <tr>
-          <th>商品名</th>
-          <th>単価(税込み)</th>
-          <th>数量</th>
-          <th>小計</th>
-          <th></th>
+          <td style="border-right: none; width: 10%;">
+            <%= image_tag cart_item.item.get_item_image, height: "60" %>
+          </td>
+          <td class="text-center" style="border-left: none;">
+            <%= cart_item.item.name %>
+          </td>
+          <td class="text-end"><%= price_taxin(cart_item.item.price) %></td>
+          <td class="text-center">
+            <%=form_with model: cart_item,url: cart_item_path(cart_item.id),method: :patch, class: "d-flex" do |f| %>
+              <%= f.select :amount, [1, 2, 3, 4, 5, 6, 7, 8, 9, 10], {}, class: "form-select mx-auto" %>
+              <%= f.submit "変更",  class: "btn btn-success ms-2 mx-auto" %>
+            <% end %>
+          </td>
+          <td class="text-end"><%= price(cart_item.subtotal) %></td>
+          <td class="text-center"><%= link_to '削除する', cart_item_path(cart_item.id), class: "btn btn-danger", method: :delete %></td>
+          <% @total += cart_item.subtotal %>
         </tr>
-      </thead>
-      <% @cart_items.each do |cart_item| %>
-      <tr>
-        <td><%= image_tag cart_item.item.get_item_image, height: "60" %><%= cart_item.item.name %></td>
-        <td><%= price_taxin(cart_item.item.price) %></td>
-        <td>
-        <%=form_with model: cart_item,url: cart_item_path(cart_item.id),method: :patch do |f| %>
-        <%= f.select :amount, [1, 2, 3, 4, 5, 6, 7, 8, 9, 10], {} %>
-        <%= f.submit "変更",  class: "btn btn-success" %>
         <% end %>
-        </td>
-        <td><%= price(cart_item.subtotal) %></td>
-        <td><%= link_to '削除する', cart_item_path(cart_item.id), class: "btn btn-danger", method: :delete %></td>
-        <% @total += cart_item.subtotal %>
-      </tr>
+      </table>
+      <div class="row">
+        <div class="col-8">
+          <%= link_to '買い物を続ける',root_path, class: "btn btn-primary" %>
+        </div>
+        <div class="col-4">
+          <table class="table table-bordered ">
+            <tr>
+              <td>合計金額</td>
+              <td class="text-end"><%= price(@total) %></td>
+            </tr>
+          </table>
+        </div>
+        <div class='row'>
+          <div class="col-3 mx-auto pb-3">
+            <%= link_to '情報入力に進む', new_order_path, class: "btn btn-success btn-lg" %>
+          </div>
+        </div>
+      <% else %>
+        <div class='container mt-3'>
+          <div class='row'>
+            <div class="col-4 mx-auto pb-3">
+              <h2>カート内に商品がありません。</h2>
+        　　</div>
+        　</div>
+        </div>
       <% end %>
-    </table>
-  </div>
-  <div class="row">
-    <div class="col-8">
-      <%= link_to '買い物を続ける',root_path, class: "btn btn-primary" %>
     </div>
-  <div class="col-4">
-    <table class="table table-bordered ">
-      <tr>
-        <td>合計金額</td>
-        <td><%= price(@total) %></td>
-      </tr>
-    </table>
-  </div>
-  <div class='row'>
-    <div class="col-3 mx-auto pb-3">
-      <%= link_to '情報入力に進む', new_order_path, class: "btn btn-success btn-lg" %>
-    </div>
-  </div>
-  <% else %>
-  <div class='container mt-3'>
-    <div class='row'>
-      <div class="col-4 mx-auto pb-3">
-        <h2>カート内に商品がありません。</h2>
-  　　</div>
-  　</div>
-  </div>
-  <% end %>
+  </div>  
+</div>
