--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -5,66 +5,49 @@
       <h2>ショッピングカート</h2>
     </div>
     <% if @cart_items.present? %>
-      <div class='col-2'>
-        <%= link_to 'カートを空にする', destroy_all_cart_items_path, class: "btn btn-danger text-nowrap", method: :delete %>
+      <div class='col-2 destroy_all'>
+        <%= link_to 'カートを空にする', destroy_all_cart_items_path, class: "btn btn-danger text-nowrap", method: :delete, remote: true %>
       </div>
-      <table class="items_list table table-bordered table-condensed align-middle text-nowrap">
-        <thead class="table-light text-center">
-          <tr>
-            <th colspan="2">商品名</th>
-            <th>単価 (税込)</th>
-            <th class="amount">数量</th>
-            <th>小計</th>
-            <th></th>
-          </tr>
-        </thead>
-        <% @cart_items.each do |cart_item| %>
-        <tr>
-          <td style="border-right: none; width: 10%;">
-            <%= image_tag cart_item.item.get_item_image, height: "60" %>
-          </td>
-          <td class="text-center" style="border-left: none;">
-            <%= cart_item.item.name %>
-          </td>
-          <td class="text-end"><%= price_taxin(cart_item.item.price) %></td>
-          <td class="text-center">
-            <%=form_with model: cart_item,url: cart_item_path(cart_item.id),method: :patch, class: "d-flex" do |f| %>
-              <%= f.select :amount, [1, 2, 3, 4, 5, 6, 7, 8, 9, 10], {}, class: "form-select mx-auto" %>
-              <%= f.submit "変更",  class: "btn btn-success ms-2 mx-auto" %>
-            <% end %>
-          </td>
-          <td class="text-end"><%= price(cart_item.subtotal) %></td>
-          <td class="text-center"><%= link_to '削除する', cart_item_path(cart_item.id), class: "btn btn-danger", method: :delete %></td>
-          <% @total += cart_item.subtotal %>
-        </tr>
-        <% end %>
-      </table>
-      <div class="row">
-        <div class="col-8">
-          <%= link_to '買い物を続ける',root_path, class: "btn btn-primary" %>
-        </div>
-        <div class="col-4">
-          <table class="table table-bordered ">
+      <div class="items_list">
+        <table class="table table-bordered table-condensed align-middle text-nowrap">
+          <thead class="table-light text-center">
             <tr>
-              <td>合計金額</td>
-              <td class="text-end"><%= price(@total) %></td>
+              <th colspan="2">商品名</th>
+              <th>単価 (税込)</th>
+              <th>数量</th>
+              <th>小計</th>
+              <th></th>
             </tr>
-          </table>
-        </div>
-        <div class='row'>
-          <div class="col-3 mx-auto pb-3">
-            <%= link_to '情報入力に進む', new_order_path, class: "btn btn-success btn-lg" %>
+          </thead>
+          <% @cart_items.each do |cart_item| %>
+            <tr class="cart_item_<%= cart_item.item.id %>">
+              <%= render "change_amount_form", cart_item: cart_item %>
+            </tr>
+          <% end %>
+        </table>
+        <div class="row">
+          <div class="col-8">
+            <%= link_to '買い物を続ける',root_path, class: "btn btn-primary" %>
           </div>
-        </div>
-      <% else %>
-        <div class='container mt-3'>
+          <div class="col-4">
+            <table class="table table-bordered ">
+              <tr>
+                <td>合計金額</td>
+                <td class="total_payment text-end"><%= price(@subtotal) %></td>
+              </tr>
+            </table>
+          </div>
           <div class='row'>
-            <div class="col-4 mx-auto pb-3">
-              <h2>カート内に商品がありません。</h2>
-        　　</div>
-        　</div>
-        </div>
-      <% end %>
-    </div>
-  </div>  
+            <div class="col-3 mx-auto pb-3">
+              <%= link_to '情報入力に進む', new_order_path, class: "btn btn-success btn-lg" %>
+            </div>
+          </div>
+        </div>        
+      </div>
+    <% else %>
+      <div class='container'>
+        <%= render "no_items" %>
+      </div>
+    <% end %>
+  </div>
 </div>
