--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,11 +1,9 @@
 <% content_for :title, "ショッピングカート" %>
 <div class='container mt-3'>
   <div class='row'>
-    <div class='col-10'>
-      <h2 class="bg-light border px-3 mb-3 d-inline-block">ショッピングカート</h2>
-      <div class="text-success success_message" style="visibility: hidden;">
-        <h5><%= flash[:notice] %></h5>
-      </div>
+    <div class='col-10 d-flex mb-3 align-items-center'>
+      <h2 class="bg-light border px-3 m-0 d-inline-block">ショッピングカート</h2>
+        <h5 class="text-success d-inline-block mx-2 my-0 p-1 success_message" style="visibility: hidden;"></h5>
     </div>
     <% if @cart_items.present? %>
       <div class='col-2 destroy_all'>
@@ -24,7 +22,17 @@
           </thead>
           <% @cart_items.each do |cart_item| %>
             <tr class="cart_item_<%= cart_item.item.id %>">
-              <%= render "change_amount_form", cart_item: cart_item %>
+              <td style="border-right: none; width: 10%;">
+                <%= image_tag cart_item.item.get_item_image, height: "60" %>
+              </td>
+              <td class="text-center" style="border-left: none;">
+                <%= cart_item.item.name %>
+              </td>
+              <td class="text-end"><%= price_taxin(cart_item.item.price) %></td>
+              <div>
+                <%= render "change_amount_form", cart_item: cart_item %>
+              </div>
+              <td class="text-center"><%= link_to '削除する', cart_item_path(cart_item.id), class: "btn btn-danger", remote: true, method: :delete %></td>
             </tr>
           <% end %>
         </table>
@@ -45,7 +53,7 @@
               <%= link_to '情報入力に進む', new_order_path, class: "btn btn-success btn-lg" %>
             </div>
           </div>
-        </div>        
+        </div>
       </div>
     <% else %>
       <div class='container'>
