--- a/app/views/public/cart_items/update.js.erb
+++ b/app/views/public/cart_items/update.js.erb
@@ -1,5 +1,19 @@
-$(".cart_item_<%= @cart_item.item.id %>").html("<%= j(render "public/cart_items/change_amount_form", cart_item: @cart_item) %>")
+$(".cart_item_<%= @cart_item.item.id %>>div").html("<%= j(render "public/cart_items/change_amount_form", cart_item: @cart_item) %>")
 $(".total_payment").html("<%= price(@subtotal) %>")
+
+$(".cart_item_<%= @cart_item.item.id %> .subtotal, .total_payment").css({
+	"background-color" : "var(--bs-warning)",
+	"transition"			 : "none"
+});
+
+setTimeout(function(){
+	$(".cart_item_<%= @cart_item.item.id %> .subtotal, .total_payment").css({
+		"background-color" : "unset",
+		"transition"			 : "all 1.5s"
+	});
+}, 1);
+
+$(".success_message").html("変更を保存しました。");
 
 $(".success_message").css({
 	"visibility" : "visible",
